{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "2fa50aab-6c98-41a8-9cfa-1cdad73ea4a1",
            "actions": [
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "b0445d31-e141-4c53-89f0-6c53315f4e45",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "3c0d44aa-ea33-4c5d-9687-4e5bad790e8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a62abe60-3962-4fc6-b3da-ffc50c932558",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e06e0a4-4bcf-4dfc-92d3-16eff3a51cf7",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}